@@ -72,6 +72,15 @@
     :ARCHIVE_CATEGORY: TODO
     :ARCHIVE_TODO: DONE
     :END:
+*** DONE start read-to-me at current cursor position
+    - State "DONE"       from "TODO"       [2011-03-02 Wed 15:23]
+    :PROPERTIES:
+    :ARCHIVE_TIME: 2011-03-02 Wed 15:23
+    :ARCHIVE_FILE: ~/src/qtcw/qtcw/docs/TODO.org
+    :ARCHIVE_OLPATH: The TODO list
+    :ARCHIVE_CATEGORY: TODO
+    :ARCHIVE_TODO: DONE
+    :END:
 
 * Version: 0.5.1
 *** DONE A makerelease packaging script.
